<resources>
    <string name="app_name">Corpa</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="corpa">Corpa</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="title_activity_maps">Map</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">REGISTER</string>
    <string name="sign_in">Sign in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="mobile">Mobile</string>
    <string name="next">NEXT</string>
    <string name="password">Password</string>
    <string name="err_msg_first_name">Enter your Name</string>
    <string name="err_email_msg">Enter valid Email Address</string>
    <string name="err_password_msg">Password should be 8 letters for strong password</string>
    <string name="err_mobile_msg">Mobile Num should be 10 digits long</string>
    <string name="sign_in_title">Sign In</string>
    <string name="register_title">Register</string>
    <string name="map">Map</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="or">OR</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="payment">Payment</string>
    <string name="my_trips">My Trips</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="mobile_register_more">Mobile</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">LOGIN</string>
    <string name="corpa_logo">CORPA</string>
    <string name="register_">Register</string>
    <string name="loading">Loading</string>
    <string name="pickup_point">Pickup Point</string>
    <string name="dropping_point">Dropping Point</string>
    <string name="start_ride">START RIDE</string>
    <string name="emergency_contact1">Emergency Contact</string>
    <string name="update">UPDATE</string>
    <string name="insert_the_number_here">Insert the Number Here</string>
    <string name="payment_details">Payment Details</string>
    <string name="my_trips1">My Trips</string>
    <string name="book_cab">Book the Cab</string>
    <string name="emergency">Emergency Contact</string>
    <string name="about_us">About Us</string>
    <string name="support1">Support</string>
    <string name="pessy_froller">Pessy Froller</string>
    <string name="sign_up1">SIGN UP</string>

</resources>
