<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/foreground_material_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@color/background_material_light"
        android:orientation="vertical"
        android:paddingTop="40dp">

        <TextView
            android:id="@+id/booking_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:gravity="center"
            android:text="Booking Details"

            android:textSize="35sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pickup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">


            <EditText
                android:id="@+id/pickup_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pickup_point" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/drop_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">


            <EditText
                android:id="@+id/drop_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dropping_point" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:background="@color/colorPrimary"
            android:text="@string/start_ride" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>